apps/1-mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  # this is the service name other pods can use to access this pod
spec:
  # this is the port this service tries to hit on pods/containers
  ports:
    - port: 3306
  selector:
    app: mariadb
    # this means we route to containers whose app label matches mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1  
  # only run 1 replica, to prevent mariadb from freaking out, since we have only one volume with all data
  selector:
    matchLabels:
      app: mariadb
      # this deployment should only be concerned about containers labeled "app=mariadb"
  strategy:
    type: Recreate
    # recreate rather than rollingUpdate, so we only have one replica running at once
  template:
    metadata:
      labels:
        app: mariadb
        # label containers so the service knows to route to them
    spec:
      containers:
        - image: linuxserver/mariadb:latest
          imagePullPolicy: Always
          name: mariadb
          volumeMounts:
            # mount a subPath of service-data as a volume for the created container
            - name: mariadb-storage
              mountPath: /config
              subPath: mariadb
            # mount a Secret for initial DB/user creation
            - name: mariadb-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: service-data
        - name: mariadb-init
          secret:
            name: mariadb-init-config
