apps/mpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: mpd
spec:
  ports:
    - port: 6600
      nodePort: 30060
  selector:
    app: mpd
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mpd
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mpd
    spec:
      containers:
        - image: hubbeking/mpd:latest
          imagePullPolicy: Always
          name: mpd
          volumeMounts:
            - name: mpd-array
              mountPath: /music
              subPath: Music
      volumes:
        - name: mpd-array
          persistentVolumeClaim:
            claimName: array
