apps/bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  ports:
    - port: 6767
  selector:
    app: bazarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bazarr
spec:
  tls:
    - hosts:
      - bazarr.hubbe.club  
  rules:
    - host: bazarr.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: bazarr
              servicePort: 6767
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - image: linuxserver/bazarr:latest
          imagePullPolicy: Always
          name: bazarr
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
              subPath: bazarr
            - name: bazarr-movies
              mountPath: /movies
            - name: bazarr-shows
              mountPath: /tv
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: service-data
        - name: bazarr-movies
          persistentVolumeClaim:
            claimName: movies
        - name: bazarr-shows
          persistentVolumeClaim:
            claimName: shows
