apps/deepdream.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepdream-api
spec:
  ports:
    - port: 8000
  selector:
    app: deepdream-api
---
apiVersion: v1
kind: Service
metadata:
  name: deepdream-queue
spec:
  ports:
    - port: 5672
  selector:
    app: deepdream-queue
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deepdream-api
spec:
  tls:
    - hosts:
      - deepdream.hubbe.club  
  rules:
    - host: deepdream.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: deepdream-api
              servicePort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream-api
    spec:
      containers:
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-api
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
              subPath: deepdream-inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
              subPath: deepdream-outputs
      volumes:
        - name: deepdream-inputs
          persistentVolumeClaim:
            claimName: service-data
        - name: deepdream-outputs
          persistentVolumeClaim:
            claimName: service-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: deepdream-worker
    spec:
      containers:
        - image: hubbeking/deepdream-docker:latest
          imagePullPolicy: Always
          name: deepdream-worker
          command: celery -A tasks worker --loglevel=INFO
          volumeMounts:
            - name: deepdream-inputs
              mountPath: /opt/deepdream/inputs
              subPath: deepdream-inputs
            - name: deepdream-outputs
              mountPath: /opt/deepdream/outputs
              subPath: deepdream-outputs
      volumes:
        - name: deepdream-inputs
          persistentVolumeClaim:
            claimName: service-data
        - name: deepdream-outputs
          persistentVolumeClaim:
            claimName: service-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deepdream-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deepdream-queue
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: deepdream-queue
    spec:
      containers:
        - image: rabbitmq:latest
          imagePullPolicy: Always
          name: deepdream-queue
