apps/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - port: 8096
  selector:
    app: jellyfin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    # jellyfin freaks out if multiple processes access its config dir at once
    # by using Recreate, old pods are terminated before new pods are deployed
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: linuxserver/jellyfin:latest
          imagePullPolicy: Always
          name: jellyfin
          resources:
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
              subPath: jellyfin
            - name: jellyfin-movies
              mountPath: /movies
              readOnly: True
            - name: jellyfin-music
              mountPath: /music
              readOnly: True
            - name: jellyfin-shows
              mountPath: /shows
              readOnly: True
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: service-data
        - name: jellyfin-movies
          persistentVolumeClaim:
            claimName: movies
        - name: jellyfin-music
          persistentVolumeClaim:
            claimName: music
        - name: jellyfin-shows
          persistentVolumeClaim:
            claimName: shows
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jellyfin
spec:
  tls:
    - hosts:
      - video.hubbe.club  
  rules:
    - host: video.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: jellyfin
              servicePort: 8096
