apps/nextcloud-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
spec:
  tls:
    - hosts:
      - cloud.hubbe.club  
  rules:
    - host: cloud.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: nextcloud
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:latest
          imagePullPolicy: Always
          name: nextcloud
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
              subPath: nextcloud
            - name: nextcloud-array
              mountPath: /mnt/hubbe/array
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: service-data
        - name: nextcloud-array
          persistentVolumeClaim:
            claimName: array-data
