apps/nextcloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
spec:
  ports:
    - port: 3306
  selector:
    app: nextcloud-db
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-redis
spec:
  ports:
    - port: 6379
  selector:
    app: nextcloud-redis
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    nginx.org/client-max-body-size: "0"
spec:
  tls:
    - hosts:
      - cloud.hubbe.club  
  rules:
    - host: cloud.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: nextcloud
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - image: nextcloud:latest
          imagePullPolicy: Always
          name: nextcloud
          volumeMounts:
            - name: nextcloud-config
              mountPath: /var/www/html
              subPath: nextcloud
            - name: nextcloud-array
              mountPath: /data
              subPath: Nextcloud
            - name: nextcloud-array
              mountPath: /array
      volumes:
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: service-data
        - name: nextcloud-array
          persistentVolumeClaim:
            claimName: array
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: nextcloud-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      containers:
        - image: mariadb:10
          imagePullPolicy: Always
          name: nextcloud-db
          volumeMounts:
            - name: nextcloud-db-storage
              mountPath: /var/lib/mysql
              subPath: nextcloud-db
      volumes:
        - name: nextcloud-db-storage
          persistentVolumeClaim:
            claimName: service-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-redis
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: nextcloud-redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nextcloud-redis
    spec:
      containers:
        - image: redis:latest
          imagePullPolicy: Always
          name: nextcloud-redis
