apps/radarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - port: 7878
  selector:
    app: radarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
spec:
  tls:
    - hosts:
      - radarr.hubbe.club  
  rules:
    - host: radarr.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: radarr
              servicePort: 7878
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: linuxserver/radarr:latest
          imagePullPolicy: Always
          name: radarr
          volumeMounts:
            - name: radarr-config
              mountPath: /config
              subPath: radarr
            - name: radarr-movies
              mountPath: /movies
            - name: radarr-downloads
              mountPath: /downloads
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: service-data
        - name: radarr-movies
          persistentVolumeClaim:
            claimName: movies
        - name: radarr-downloads
          persistentVolumeClaim:
            claimName: downloads
