apps/resilio-sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync-gui
spec:
  ports:
    - port: 8888
  selector:
    app: resilio-sync
---
apiVersion: v1
kind: Service
metadata:
  name: resilio-sync
spec:
  ports:
    - port: 55555
      nodePort: 31113
  selector:
    app: resilio-sync
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: resilio-sync
spec:
  tls:
    - hosts:
      - sync.hubbe.club  
  rules:
    - host: sync.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: resilio-sync-gui
              servicePort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resilio-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resilio-sync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: resilio-sync
    spec:
      containers:
        - image: linuxserver/resilio-sync:latest
          imagePullPolicy: Always
          name: resilio-sync
          volumeMounts:
            - name: resilio-sync-config
              mountPath: /config
              subPath: resilio-sync
            - name: sync
              mountPath: /sync
      volumes:
        - name: resilio-sync-config
          persistentVolumeClaim:
            claimName: service-data
        - name: sync
          persistentVolumeClaim:
            claimName: sync
