apps/roundcubemail-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcubemail-db
spec:
  ports:
    - port: 3306
  selector:
    app: roundcubemail-db
---
apiVersion: v1
kind: Service
metadata:
  name: roundcubemail
spec:
  ports:
    - port: 80
  selector:
    app: roundcubemail
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: roundcubemail
spec:
  tls:
    - hosts:
      - mail.hubbe.club  
  rules:
    - host: mail.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: roundcubemail
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubemail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcubemail
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: roundcubemail
    spec:
      containers:
        - image: roundcube/roundcubemail:latest
          imagePullPolicy: Always
          name: roundcubemail
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubemail-db
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: roundcubemail-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: roundcubemail-db
    spec:
      containers:
        - image: mariadb:10
          imagePullPolicy: Always
          name: roundcubemail-db
          volumeMounts:
            - name: roundcubemail-db-storage
              mountPath: /config
              subPath: roundcubemail-db
      volumes:
        - name: roundcubemail-db-storage
          persistentVolumeClaim:
            claimName: service-data
