apps/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
    - port: 8989
  selector:
    app: sonarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
spec:
  tls:
    - hosts:
      - sonarr.hubbe.club  
  rules:
    - host: sonarr.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: sonarr
              servicePort: 8989
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: linuxserver/sonarr:preview
          imagePullPolicy: Always
          name: sonarr
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
              subPath: sonarr
            - name: sonarr-shows
              mountPath: /tv
            - name: sonarr-downloads
              mountPath: /downloads
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: service-data
        - name: sonarr-shows
          persistentVolumeClaim:
            claimName: shows
        - name: sonarr-downloads
          persistentVolumeClaim:
            claimName: downloads
